# LucytEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateVersionHeader.cmake
src/: bruh_frag.glsl  bruh_vert.glsl  lucyt_version.h  lucyt_version.h.in  main.cpp  opengl_shader.cpp  opengl_shader.h
